# Serial

./: .gitignore  CMakeLists.txt  README.md  links.md  mod.ts  schnittstelle.drawio  test.ts
.github/workflows/: build.yml  build_linux.yml  build_macos.yml  build_windows.yml  cmake.yml  release.yml
cpp/: CMakeLists.txt
cpp/include/: serial.h  status_codes.h
cpp/include/error/: error.h  init_comm_state_errors.h  init_timeouts_errors.h  open_errors.h
cpp/src/: serial_unix.cpp  serial_windows.cpp
include/: serial.h  serial_unix.h  serial_windows.h  status_codes.h
lib/: Serial.ts  check_for_error_code.ts  decode.ts  dynamic_library_functions.ts  encode.ts  load_binary_for_os.ts  load_dl.ts  open_dl.ts  parity.ts  ports.ts  register_serial_functions.ts  serial_options.d.ts
lib/constants/: baudrate.ts  binary_extensions.ts  data_bits.d.ts  data_bits.ts  parity.d.ts  parity.ts  status_codes.ts  stop_bits.d.ts  stop_bits.ts
lib/errors/: error_code.ts
lib/interfaces/: serial_functions.d.ts  serial_options.d.ts
src/: CMakeLists.txt  serial.cpp  serial_unix.cpp  serial_windows.cpp
src/include/: serial.h  serial_unix.h  serial_windows.h
src/src/: serial.cpp  serial_unix.cpp  serial_windows.cpp
ts/: Serial.ts  check_for_error_code.ts  load_binary_for_os.ts  register_serial_functions.ts
ts/constants/: baudrates.ts  data_bits.ts  parity.ts
ts/interfaces/: serial_functions.d.ts  serial_options.d.ts
ts/types/: object_values_map.ts
